# astrbot_plugin_python_teacher

./: CHANGELOG.md  README.md  main.py  metadata.yaml  pyproject.toml  requirements.txt
astrbot_plugin_python_teacher/: _conf_schema.json  pyproject.toml
